--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="image">
-        <img src="images/hero-img.png" alt="" />
+        <img src="hero-img.png" alt="" />
       </div>
     </section>
 
